<?xml version="1.0" encoding="utf-8"?>



<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">


    <ImageView
        android:id="@+id/board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/board"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Chess A Up-->
    <ImageView
        android:id="@+id/aa"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:contentDescription="@string/p_pink_up"
        app:layout_constraintBottom_toTopOf="@+id/ba"
        app:layout_constraintEnd_toStartOf="@+id/ea"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:srcCompat="@drawable/aa" />

    <!--Chess A Back-->
    <ImageView
        android:id="@+id/ae"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:contentDescription="@string/p_pink_up"
        app:layout_constraintBottom_toTopOf="@+id/ba"
        app:layout_constraintEnd_toStartOf="@+id/ee"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:srcCompat="@drawable/ae"/>

    <!--Chess B Up-->
    <ImageView
        android:id="@+id/ba"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:contentDescription="@string/p_olive_up"
        app:layout_constraintBottom_toTopOf="@+id/ca"
        app:layout_constraintEnd_toStartOf="@+id/fa"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aa"
        app:srcCompat="@drawable/ba" />


    <!--Chess B Back-->
    <ImageView
        android:id="@+id/be"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:contentDescription="@string/p_olive_up"
        app:layout_constraintBottom_toTopOf="@+id/ca"
        app:layout_constraintEnd_toStartOf="@+id/fe"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aa"
        app:srcCompat="@drawable/be" />


    <ImageView
        android:id="@+id/ca"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:contentDescription="@string/p_red_up"
        app:layout_constraintBottom_toTopOf="@+id/da"
        app:layout_constraintEnd_toStartOf="@+id/ga"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ba"
        app:srcCompat="@drawable/ca" />


    <ImageView
        android:id="@+id/da"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:contentDescription="@string/p_green_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ha"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ca"
        app:srcCompat="@drawable/da" />

    <!-- Chess E Up-->
    <ImageView
        android:id="@+id/ea"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:contentDescription="@string/p_orange_up"
        app:layout_constraintBottom_toTopOf="@+id/fa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/aa"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ea" />

    <!-- Chess E Back-->
    <ImageView
        android:id="@+id/ee"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:contentDescription="@string/p_orange_up"
        app:layout_constraintBottom_toTopOf="@+id/fa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ae"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ee" />

    <!--Cheese F Up-->
    <ImageView
        android:id="@+id/fa"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:contentDescription="@string/p_purple_up"
        app:layout_constraintBottom_toTopOf="@+id/ga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ba"
        app:layout_constraintTop_toBottomOf="@+id/ea"
        app:srcCompat="@drawable/fa" />

    <ImageView
        android:id="@+id/fe"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:contentDescription="@string/p_purple_up"
        app:layout_constraintBottom_toTopOf="@+id/ga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/be"
        app:layout_constraintTop_toBottomOf="@+id/ea"
        app:srcCompat="@drawable/fe" />

    <!--Cheese G Up-->
    <ImageView
        android:id="@+id/ga"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:contentDescription="@string/p_yellow_up"
        app:layout_constraintBottom_toTopOf="@+id/ha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ca"
        app:layout_constraintTop_toBottomOf="@+id/fa"
        app:srcCompat="@drawable/ga" />

    <!--Cheese H Up-->
    <ImageView
        android:id="@+id/ha"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:contentDescription="@string/p_blue_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/da"
        app:layout_constraintTop_toBottomOf="@+id/ga"
        app:srcCompat="@drawable/ha" />



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>